JDK engine now uses MD5 hashes of scripts vs. timestamps